--- a/store/templates/store/product_detail.html
+++ b/store/templates/store/product_detail.html
@@ -407,7 +407,7 @@
 
                     <div class="social-share-icons mt-4">
                         <a href="https://www.facebook.com/share/16t5RYifVW/" aria-label="Share on Facebook"><i class="fab fa-facebook-f"></i></a>
-                        <a href="https://www.instagram.com/zunaisha_09876?igsh=OGsxNmxpbWg2OTUz" aria-label="Share on instagram"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/zunaisha__byzohanarts?igsh=OWIxYXBtbGxqZDJv" aria-label="Share on instagram"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
