--- a/templates/base.html
+++ b/templates/base.html
@@ -42,7 +42,7 @@
 
         /* NEW Header Banner for the full-width logo */
         .header-banner-full {
-            background-color: #f8f8f8; /* Adjust background if needed */
+            background-color :  white; /* Adjust background if needed */
             padding: 10px 0; /* Add vertical padding, no horizontal padding to allow full width */
             text-align: center;
             border-bottom: 1px solid #eeeeee;
@@ -581,7 +581,7 @@
                     11:00 AM – 10:00 PM</p>
                 <div class="social-icons">
                     <a href="https://www.facebook.com/share/16t5RYifVW/" aria-label="Facebook"><i class="bi bi-facebook"></i></a>
-                    <a href="https://www.instagram.com/zunaisha_09876?igsh=OGsxNmxpbWg2OTUz" aria-label="Instagram"><i class="bi bi-instagram"></i></a>
+                    <a href="https://www.instagram.com/zunaisha__byzohanarts?igsh=OWIxYXBtbGxqZDJv" aria-label="Instagram"><i class="bi bi-instagram"></i></a>
                     <a href="tel:+923210835000" aria-label="Call Us"><i class="bi bi-telephone-fill"></i></a>
                     <a href="https://wa.me/923210835000" aria-label="WhatsApp"><i class="bi bi-whatsapp"></i></a>
                 </div>
