--- a/store/templates/store/contact.html
+++ b/store/templates/store/contact.html
@@ -215,7 +215,7 @@
                     </div>
                     <div class="info-text">
                         <strong>Email</strong>
-                        <a href="mailto:zunaishaclothing@gmail.com" class="text-white text-decoration-none">zunaishaclothing@gmail.com</a>
+                        <a href="mailto:zunaishabyzohan@gmail.com" class="text-white text-decoration-none">zunaishabyzohan@gmail.com</a>
                     </div>
                 </div>
             </div>
