--- a/store/templates/store/privacypolicy.html
+++ b/store/templates/store/privacypolicy.html
@@ -106,7 +106,7 @@
             We do not sell or otherwise pass your details to third parties for marketing purposes. Marketing communications
         </p>
         <p class="content-text">
-            At all times, we will offer you the opportunity to unsubscribe out of any service or update to which you have subscribed. If you change your mind, Any e-mail we send you will contain an easy automated unsubscribe link so that you can opt-out of that particular mail shot. Simply follow the indications in the e-mail. Alternatively, you can change your email preferences or opt out of all emails by logging into my account. To opt out of direct mail service or updates, please contact Zunaisha by Zohan Arts customer care representative on +92-321-083500-0 (from a mobile or internationally) or by email at zunaishaclothing@gmail.com
+            At all times, we will offer you the opportunity to unsubscribe out of any service or update to which you have subscribed. If you change your mind, Any e-mail we send you will contain an easy automated unsubscribe link so that you can opt-out of that particular mail shot. Simply follow the indications in the e-mail. Alternatively, you can change your email preferences or opt out of all emails by logging into my account. To opt out of direct mail service or updates, please contact Zunaisha by Zohan Arts customer care representative on +92-321-083500-0 (from a mobile or internationally) or by email at zunaishabyzohan@gmail.com
         </p>
 
         <h2 class="section-title">HOW YOU CAN ACCESS AND, IF NECESSARY, CHANGE THE PERSONAL INFORMATION ZUNAISHA BY ZOHAN ARTS MAINTAINS</h2>
