--- a/store/templates/store/index.html
+++ b/store/templates/store/index.html
@@ -302,30 +302,30 @@
                     <div class="row">
                         <div class="col-md-4">
                             <div class="card">
-                                <a href="{% url 'store:home' %}"> {# Changed from product3 to home #}
-                                    <img src="{% static 'images/p10.jpeg' %}" class="card-img-top" alt="Premium Pret">
+                                <a href="{% url 'store:page0' %}"> {# Changed from product3 to home #}
+                                    <img src="{% static 'images/U1.jpg' %}" class="card-img-top" alt="Premium Pret">
                                 </a>
                                 <div class="card-body">
-                                    <h5 class="card-title">Luxury Formals</h5>
+                                    <h5 class="card-title">Ethereal charm ensemble</h5>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="card">
-                                <a href="{% url 'store:home' %}"><img src="{% static 'images/p2.jpeg' %}" class="card-img-top" alt="Premium Pret"> {# Changed from product3 to home #}
+                                <a href="{% url 'store:page0' %}"><img src="{% static 'images/A3.jpg' %}" class="card-img-top" alt="Premium Pret"> {# Changed from product3 to home #}
                                 </a>
                                 <div class="card-body">
-                                    <h5 class="card-title">Premium Pret</h5>
+                                    <h5 class="card-title">Azure Majesty</h5>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="card">
-                                <a href="{% url 'store:home' %}"> {# Changed from product3 to home #}
-                                    <img src="{% static 'images/p3.jpeg' %}" class="card-img-top" alt="Wedding Formals">
+                                <a href="{% url 'store:page0' %}"> {# Changed from product3 to home #}
+                                    <img src="{% static 'images/B2.jpg' %}" class="card-img-top" alt="Wedding Formals">
                                 </a>
                                 <div class="card-body">
-                                    <h5 class="card-title">Wedding Formals</h5>
+                                    <h5 class="card-title">Crimson Radiance Ensemble</h5>
                                 </div>
                             </div>
                         </div>
@@ -340,31 +340,31 @@
                     <div class="row">
                         <div class="col-md-4">
                             <div class="card">
-                                <a href="{% url 'store:home' %}"> {# Changed from product3 to home #}
-                                    <img src="{% static 'images/p4.png' %}" class="card-img-top" alt="Luxury Formals">
+                                <a href="{% url 'store:page0' %}"> {# Changed from product3 to home #}
+                                    <img src="{% static 'images/C1.jpg' %}" class="card-img-top" alt="Luxury Formals">
                                 </a>
                                 <div class="card-body">
-                                    <h5 class="card-title">Luxury Formals</h5>
+                                    <h5 class="card-title">Peach Blossom Serenity</h5>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="card">
-                                <a href="{% url 'store:home' %}"> {# Changed from product3 to home #}
-                                    <img src="{% static 'images/p5.jpeg' %}" class="card-img-top" alt="Premium Pret">
+                                <a href="{% url 'store:page0' %}"> {# Changed from product3 to home #}
+                                    <img src="{% static 'images/D2.jpg' %}" class="card-img-top" alt="Premium Pret">
                                 </a>
                                 <div class="card-body">
-                                    <h5 class="card-title">Premium Pret</h5>
+                                    <h5 class="card-title">Organza Fabric</h5>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="card">
-                                <a href="{% url 'store:home' %}"> {# Changed from product3 to home #}
-                                    <img src="{% static 'images/p6.jpeg' %}" class="card-img-top" alt="Wedding Formals">
+                                <a href="{% url 'store:page0' %}"> {# Changed from product3 to home #}
+                                    <img src="{% static 'images/E3.jpg' %}" class="card-img-top" alt="Wedding Formals">
                                 </a>
                                 <div class="card-body">
-                                    <h5 class="card-title">Wedding Formals</h5>
+                                    <h5 class="card-title">Coral Elegance</h5>
                                 </div>
                             </div>
                         </div>
@@ -378,28 +378,28 @@
                     <div class="row">
                         <div class="col-md-4">
                             <div class="card">
-                                <a href="{% url 'store:home' %}"> {# Changed from product3 to home #}
-                                    <img src="{% static 'images/p7.jpeg' %}" class="card-img-top" alt="Slide">
+                                <a href="{% url 'store:page0' %}"> {# Changed from product3 to home #}
+                                    <img src="{% static 'images/F2.jpg' %}" class="card-img-top" alt="Slide">
                                 </a>
                                 <div class="card-body">
-                                    <h5 class="card-title">Festive Pret</h5>
+                                    <h5 class="card-title">Ethereal Rose</h5>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="card">
-                                <a href="{% url 'store:home' %}"> {# Changed from product3 to home #}
-                                    <img src="{% static 'images/p8.jpeg' %}" class="card-img-top" alt="Slide">
+                                <a href="{% url 'store:page0' %}"> {# Changed from product3 to home #}
+                                    <img src="{% static 'images/i1 copy.jpg' %}" class="card-img-top" alt="Slide">
                                 </a>
                                 <div class="card-body">
-                                    <h5 class="card-title">Luxury Pret</h5>
+                                    <h5 class="card-title">Golden Bloom Ensemble</h5>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="card">
-                                <a href="{% url 'store:home' %}"> {# Changed from product3 to home #}
-                                    <img src="{% static 'images/p9.jpeg' %}" class="card-img-top" alt="Slide">
+                                <a href="{% url 'store:page0' %}"> {# Changed from product3 to home #}
+                                    <img src="{% static 'images/j1.jpg' %}" class="card-img-top" alt="Slide">
                                 </a>
                                 <div class="card-body">
                                     <h5 class="card-title">Classy Pret</h5>
@@ -431,13 +431,13 @@
     <br><br><br>
     <div class="container image-boxes-section">
         <a href="javascript:void(0);" class="image-box"> {# Changed to javascript:void(0) #}
-            <img src="{% static 'images/p22.jpeg' %}" alt="Deluxe" />
-            <p>DELUXE</p>
+            <img src="{% static 'images/H1.jpg' %}" alt="Moonlit Shimmer" />
+            <p>Moonlit Shimmer</p>
         </a>
 
         <a href="javascript:void(0);" class="image-box"> {# Changed to javascript:void(0) #}
-            <img src="{% static 'images/j7.jpeg' %}" alt="Jewelry" />
-            <p>JEWELRY</p>
+            <img src="{% static 'images/U1.jpg' %}" alt="Ethereal charm ensemble" />
+            <p>Ethereal charm ensemble</p>
         </a>
     </div>
 
